# aws-stepfunctions-demo

./: .gitignore  Dockerfile  Makefile  README.md  app.py  cdk.json  pyproject.toml
assets/: design.drawio
functions/: handlers.py  html_cleaner.py
infra/: state_machine_definition.py  step_function_stack.py
stack/: lambdas.py  policies.py  state_machine_definition.py  step_function_stack.py
stacks/: state_machine_definition.py  step_function_stack.py
stacks/lambdas/: lambas_stack.py
stacks/step_functions/: lambdas.py  state_machine_definition.py  step_function_stack.py
test/functions/: html_parser_test.py
